--- a/build.xml
+++ b/build.xml
@@ -1,22 +1,40 @@
 <project>
+    <property name="src" location="./src/" />
+    <property name="build" location="build" />
+    <property name="library" location="lib" />
+    <property name="jar" location="IJA21.jar" />
 
-    <target name="clean">
-        <delete dir="build"/>
-    </target>
-
-
-    <target name="compile">
-        <mkdir dir="build"/>
-
-        <javac classpath="org.json.simple" srcdir="src" destdir="build"/>
-    </target>
-
-    <target name="run" depends="compile">
-        <java classname="sample.Main">
-            <classpath path="build"/>
-        </java>
-    </target>
+        <target name="compile">
+            <mkdir dir="build" />
+            <javac destdir="${build}" includeantruntime="first">
+                <src path="${src}" />
+                <classpath>
+                    <pathelement path="${build}" />
+                    <fileset dir="${library}" includes="*.jar" />
+                </classpath>
+            </javac>
+        </target>
 
 
+        <target name="jar" depends="compile">
+            <jar destfile="${build}/${jar}" basedir="${build}" excludes="**/*.jar">
+                <manifest>
+                    <attribute name="Main-Class" value="sample.Main" />
+                    <attribute name="Class-Path" value="${library}/json-simple-1.1.jar" />
+                </manifest>
+            </jar>
+        </target>
 
-</project>
+        <target name="run" depends="jar">
+            <java jar="${build}/${jar}" fork="true">
+                <classpath>
+                    <fileset dir="${library}" includes="*.jar" />
+                </classpath>
+            </java>
+        </target>
+
+        <target name="clean">
+            <delete dir="${build}" />
+        </target>
+
+    </project>
