--- a/build.xml
+++ b/build.xml
@@ -1,40 +1,55 @@
 <project>
-    <property name="src" location="./src/" />
-    <property name="build" location="build" />
-    <property name="library" location="lib" />
-    <property name="jar" location="IJA21.jar" />
-
-        <target name="compile">
-            <mkdir dir="build" />
-            <javac destdir="${build}" includeantruntime="first">
-                <src path="${src}" />
-                <classpath>
-                    <pathelement path="${build}" />
-                    <fileset dir="${library}" includes="*.jar" />
-                </classpath>
-            </javac>
-        </target>
+    <property name="src" location="./src/"/>
+    <property name="build" location="build"/>
+    <property name="library" location="lib"/>
+    <property name="doc" location="doc"/>
+    <property name="jar" value="IJA21.jar"/>
 
 
-        <target name="jar" depends="compile">
-            <jar destfile="${build}/${jar}" basedir="${build}" excludes="**/*.jar">
-                <manifest>
-                    <attribute name="Main-Class" value="sample.Main" />
-                    <attribute name="Class-Path" value="${library}/json-simple-1.1.jar" />
-                </manifest>
-            </jar>
-        </target>
+    <target name="clean">
+        <delete dir="${build}"/>
+        <delete dir="${doc}"/>
+    </target>
 
-        <target name="run" depends="jar">
-            <java jar="${build}/${jar}" fork="true">
-                <classpath>
-                    <fileset dir="${library}" includes="*.jar" />
-                </classpath>
-            </java>
-        </target>
+    <target name="compile" depends="clean">
+        <mkdir dir="${build}"/>
+        <javac destdir="${build}" includeantruntime="first">
+            <src path="${src}"/>
+            <classpath>
+                <fileset dir="${library}" includes="*.jar"/>
+            </classpath>
+        </javac>
+    </target>
 
-        <target name="clean">
-            <delete dir="${build}" />
-        </target>
 
-    </project>
+    <target name="jar" depends="compile">
+        <jar destfile="${build}/${jar}" basedir="${build}" excludes="**/*.jar">
+            <manifest>
+                <attribute name="Main-Class" value="sample.Main"/>
+                <attribute name="Class-Path" value="${library}/json-simple-1.1.jar"/>
+            </manifest>
+        </jar>
+    </target>
+
+    <target name="run" depends="jar">
+        <java jar="${build}/${jar}" fork="true"/>
+    </target>
+
+
+    <target name="doc" depends="clean">
+        <mkdir dir="${doc}"/>
+        <javadoc locale="cs_CZ"
+                 sourcepath="${src}"
+                 excludepackagenames=""
+                 destdir="${doc}"
+                 author="true"
+                 version="true"
+                 use="true"
+                 windowtitle="IJA PROJEKT"
+                 charset="UTF-8">
+            <doctitle><![CDATA[<h1>IJA PROJEKT</h1>]]></doctitle>
+            <bottom><![CDATA[<i>Autor: Dokoupil Ladislav, Bobola Adrián</i>]]></bottom>
+        </javadoc>
+    </target>
+
+</project>
