--- a/build.xml
+++ b/build.xml
@@ -1,6 +1,7 @@
 <project>
     <property name="src" location="./src/"/>
     <property name="build" location="build"/>
+    <property name="dest" location="dest"/>
     <property name="library" location="lib"/>
     <property name="doc" location="doc"/>
     <property name="jar" value="IJA21.jar"/>
@@ -9,6 +10,7 @@
     <target name="clean">
         <delete dir="${build}"/>
         <delete dir="${doc}"/>
+        <delete dir="${dest}"/>
     </target>
 
     <target name="compile" depends="clean">
@@ -23,7 +25,8 @@
 
 
     <target name="jar" depends="compile">
-        <jar destfile="${build}/${jar}" basedir="${build}" excludes="**/*.jar">
+        <mkdir dir="${dest}"/>
+        <jar destfile="${dest}/${jar}" basedir="${build}" excludes="**/*.jar">
             <manifest>
                 <attribute name="Main-Class" value="ija21.Main"/>
                 <attribute name="Class-Path" value="${library}/json-simple-1.1.jar"/>
@@ -32,7 +35,7 @@
     </target>
 
     <target name="run" depends="jar">
-        <java jar="${build}/${jar}" fork="true"/>
+        <java jar="${dest}/${jar}" fork="true"/>
     </target>
 
 
