--- a/build.xml
+++ b/build.xml
@@ -56,11 +56,7 @@
                  use="true"
                  windowtitle="IJA PROJEKT"
                  charset="UTF-8">
-            <classpath>
-                <fileset dir="${library}">
-                    <include name="json-simple-1.1.jar"/>
-                </fileset>
-            </classpath>
+            <classpath refid="class.path"/>
             <doctitle><![CDATA[<h1>IJA PROJEKT</h1>]]></doctitle>
             <bottom><![CDATA[<i>Autor: Dokoupil Ladislav, Bobola Adrián</i>]]></bottom>
         </javadoc>
